# numx

./: README.md  pyproject.toml
numx/: __init__.py  _actual_math.py  _exceptions.py  _numx_main.py  _parser.py
tests/: test_numx.py
